# UGR_Metodologia_de_programacion

./: .gitignore  CMakeLists.txt
p0/: fruteria.cp  tiempo  tiempo.cpp
p1/version1/: circulomedio.cp
p1/version2/include/: punto.h
p1/version2/src/: central.cpp  circulo.cpp
p1/version3/include/: circulo.h
p1/version3/src/: circulo.cpp
p1/version4/: makefile
p1/version4/src/: punto.cpp
p2/: makefile
p2/doc/: .~lock.informe.odt#  informe.odt
p2/src/: bloqueLed.cpp  bloqueLed.cpp~  test.cpp  test.cpp~
p3/: makefile  plano0.pgm  plano6.pgm  trozo.pgm
p3/include/: byte.h  byte.h~  imagen.h
p3/src/: arteASCII.cpp  imagen.cpp  imagen.cpp~  testarteASCII.cpp
p4/: gio.txt  hola1.txt  hola2.txt  hola3.txt  plano0.pgm  plano6.pgm
p4/include/: pgm.h~
p4/src/: arteASCII.cpp  imagen.cpp  pgm.cpp~  testarteASCII.cpp  testarteASCII.cpp~
p5/: ascii1.txt  ascii2.txt  ascii3.txt  makefile  plano6.pgm  trozo.pgm
p5/doc/: informe.pages
p5/include/: imagen.h
p5/src/: arteASCII2.cpp  imagen.cpp  lista.cpp  pgm.cpp  testplano.cpp
p6/imagen/matriz/: gatolena.pgm
p6/imagen/matriz/doc/: .~lock.informe.odt#
p6/imagen/matriz/include/: byte.h  imagen.h  lista.h  pgm.h
p6/imagen/matriz/src/: arteASCII2.cpp  byte.cpp  imagen.cpp  lista.cpp  pgm.cpp  suma.cpp  testarteASCII.cpp  testimagen.cpp
p6/imagen/vector/: 2gio.pgm  2gios.pgm  ascii0.txt  ascii1.txt  ascii2.txt  gatolena.pgm  giodegradado.pgm  giolena.pgm  giosss.pgm  giotrozo.pgm  makefile  nueva.pgm
p6/imagen/vector/include/: imagen.h  lista.h  pgm.h
p6/imagen/vector/src/: imagen.cpp  (+6 more)
p6/src/: arteASCII2.cpp  imagen.cpp  pgm.cpp  testimagen.cpp  testplano.cpp
